handle emoji polyfill

--- a/marquees/emojis.html
+++ b/marquees/emojis.html
@@ -18,6 +18,7 @@
 
 
 </body>
+<script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
 
 
 <script type="text/javascript">
@@ -25,5 +26,7 @@
 const emojis = ["💹","📈","💸","💰","💎","👑","💍","🪙","🤑","💷","💴","💵","💶","💲","💸","💰","🍻","🍾","🥂","🌶","🔥","❤️‍🔥","🌋","🍀","🎰","🔔","🚨","🎁","🥇","🌟","❓","🍒","🍉","🍇","🍋","🍯","💸","💰","💎","👑","💍","🪙","🎄","🍄","❄️","😵‍💫","🍻","🍾","🥂","🎉","🕺","💃","🎊","🥳","🎈","🍻","🍾","🥂","💫","🔥","🚀","⚡️","✨","💥","🤯","🧨","💣","💥","🤯","🧨","💣","💫","🔥","🚀","⚡️","✨","🌋","☄️","🦄","🌈","💋","💦","😍","❤️‍🔥","❤️","🍆","🍑","🌶","🍬","🍭","🎂","🍫","🍦","🍄","🍒","🍉","🍇","🍋","🍯","🍆","🍑","🌶","🏎","🇺🇸","★","🏖","🏄‍♂️","🐄","🤡","💩","😂","★","→","←","🌜","🌛","🌝","🌞","🌎","🌟","🍭","🎨","🌈","🦄","🎉","🍒","🍉","🍇","🍋","🍯","‼️","❗️","🔊","💥","🤯","🧨","💣","👨‍💻","🕸","👁","👁‍🗨","🌎","🙌","🤩","‼️","💸","🤑","🔥","😂","💥","💪","⚠️","🐂","🤲"]
 
 emojis.forEach(e => document.body.innerHTML += `<span>${e}</span>`)
+  twemoji.parse(document.body);
+
 </script>
 </html>
