--- a/marquees/index.html
+++ b/marquees/index.html
@@ -100,6 +100,9 @@ MARQUEES TODO
 
 </head>
 
+<script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+
+
 
 <script src="./utils.js"></script>
 <script src="./sound.js"></script>
