--- a/marquees/index.html
+++ b/marquees/index.html
@@ -64,11 +64,18 @@ MARQUEES TODO
   <title>$$$</title>
     <script>
       function genTokenData(projectNum) {
+        const qp = window.location.search
+          ? window.location.search.replace('?', '').split('&').reduce((params, i) => {
+              const [k, v] = i.split('=')
+              params[k] = v
+              return params
+            }, {})
+          : {}
 
         const tokenId = String(projectNum * 1000000 + Math.floor(Math.random() * 1000))
         let hash = '0x'
-        if (window.location.search.includes('?hash=')) {
-          hash = window.location.search.slice(6)
+        if (qp.hash) {
+          hash = qp.hash
         } else {
           for (let i = 0; i < 64; i++) {
             hash += Math.floor(Math.random() * 16).toString(16)
