--- a/marquees/index.html
+++ b/marquees/index.html
@@ -64,6 +64,7 @@
 <script src="./text.js"></script>
 <script src="./sections.js"></script>
 <script src="./index.js"></script>
+<!-- <script src="./min.js"></script> -->
 
 <body>
 
