--- a/marquees/index.html
+++ b/marquees/index.html
@@ -52,19 +52,19 @@
 
 </head>
 
-<script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+<script src="./twemoji.min.js" crossorigin="anonymous"></script>
 
 
 
-<!-- <script src="./utils.js"></script>
+<script src="./utils.js"></script>
 <script src="./$.js"></script>
 <script src="./globals.js"></script>
 <script src="./sound.js"></script>
 <script src="./components.js"></script>
 <script src="./text.js"></script>
 <script src="./sections.js"></script>
-<script src="./index.js"></script> -->
-<script src="./min.js"></script>
+<script src="./index.js"></script>
+<!-- <script src="./min.js"></script> -->
 
 <body>
 
