--- a/dev/index.html
+++ b/dev/index.html
@@ -56,15 +56,15 @@
 
 
 
-<script src="./utils.js"></script>
+<!-- <script src="./utils.js"></script>
 <script src="./$.js"></script>
 <script src="./globals.js"></script>
 <script src="./sound.js"></script>
 <script src="./components.js"></script>
 <script src="./text.js"></script>
 <script src="./sections.js"></script>
-<script src="./index.js"></script>
-<!-- <script src="./min.js"></script> -->
+<script src="./index.js"></script> -->
+<script src="./min.js"></script>
 
 <body>
 
